--- a/requirements.txt
+++ b/requirements.txt
@@ -133,7 +133,7 @@ tzdata==2023.3
 uri-template==1.2.0
 urllib3==2.0.7
 uvicorn==0.23.2
-uvloop==0.17.0
+# uvloop==0.17.0
 watchfiles==0.20.0
 wcwidth==0.2.8
 webcolors==1.13
