--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ include = '\.pyi?$'
 
 [tool.ruff]
 line-length = 88
+
+[tool.ruff.lint]
 exclude = [".venv", "build", "dist"]
 select = ["E", "F", "I", "C90"]
 
